--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
       <div class="container">
         <div class="row g-5">
-          <div class="col-lg-5 mx-0">
+          <div class="col-lg-5 mx-0 px-0">
             <div class="card-highlight-conquistas h-100">
               <figure class="img-content-conquistas mb-3 flex-shrink-0">
                 <img src="./assets/imgs/seduckathon-estudantes-piauienses.png" alt="equipeAeebuddy-img" class="img-fluid rounded-5 mt-3">
@@ -272,7 +272,7 @@
 
           <div class="col-lg-7">
             <div class="row g-5 ">
-              <div class="col-lg-6 padding-zero">
+              <div class="col-lg-6 px-0">
                 <div class="card-highlight-conquistas h-100">
                   <figure class="img-content-conquistas mb-3 flex-shrink-0">
                     <a href="https://www.instagram.com/aeebuddy/?locale=id">
@@ -289,7 +289,7 @@
               </div> <!-- End of the firts card-->
 
               <div class="col-lg-6 mx-0">
-                <div class="card-highlight-conquistas">
+                <div class="card-highlight-conquistas px-0">
                   <figure class="img-content-conquistas mb-3 flex-shrink-0">
                     <img src="./assets/imgs/seduckathon-usa.jpg" alt="Seduckathon-usa" class="img-fluid rounded-5 mt-3">
                   </figure>
@@ -306,7 +306,7 @@
 
             
               <div class="col-lg-6 mx-0">
-                <div class="card-highlight-conquistas">
+                <div class="card-highlight-conquistas px-0">
                   <figure class="img-content-conquistas mb-3 flex-shrink-0">
                       <img src="./assets/imgs/google-josue.jpg" alt="Google-img" class="img-fluid rounded-5 mt-3" >
                   </figure>
@@ -321,7 +321,7 @@
               
 
               <div class="col-lg-6 mx-0">
-                <div class="card-highlight-conquistas h-100">
+                <div class="card-highlight-conquistas h-100 px-0">
                   <figure class="img-content-conquistas mb-3 flex-shrink-0">
                     <img src="./assets/imgs/baseball.jpg" alt="baseball-usa-img" class="img-fluid rounded-5 mt-3">
                   </figure>
