--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </section>
 
     <section id="sobre-me" class="min-vh-50 bg-gradient-animado pt-5">
-        <div class="container pt-5 data-aos="fade-up" data-aos-delay="100"">
+        <div class="container-fluid pt-5 data-aos="fade-up" data-aos-delay="100"">
             <div class="row align-items-start justify-content-center">
                 <div class=" col-12-12 col-lg-7  p-0 sobre-me-content">
                     <h1 class="mt-5 fs-4">Sobre mim</h1>
